--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="buttons">
         <a href="physics.html">Physics</a>
         <a href="chemistry.html">Chemistry</a>
-        <a href="math.html">Math</a>
+        <a href="math.html">Mathematics</a>
         <a href="Noteca Version1.0.apk" class="download-btn" download>Download App</a>
       </div>
     </div>
